# szitas-logger

./: .coveragerc  .gitignore  README.md  requirements_build.txt  requirements_gate.txt  setup.cfg  setup.py
.github/workflows/: build.yml  gate.yml  manual.yml  schedule.yml
szitas_logger/: __init__.py  logger.py
tests/: test_logger.py
