[metadata]
name = szitas_logger
author = Gábor Szitás
author_email = gabor.szitas.work@gmail.com
description =
    This project is my japl (just another python logger) project which I'm using
    for years but newer goes to public.
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://szitasg.github.io/
project_urls =
    Source Code = https://github.com/szitasg/szitas-logger
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6

[files]
packages =
    szitas_logger

[bdist_wheel]
universal = 1
